deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharmacy-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pharmacy
  template:
    metadata:
      labels:
        app: pharmacy
    spec:
      containers:
      - name: pharmacy
        image: akbaralidevops/pharmacynode-app:latest100
        ports:
        - containerPort: 7000
