service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-service
spec:
  selector:
    app: pharmacy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
  type: NodePort
