ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "pharmacy"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: pharmacy
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: "pharmacy-service"
                port:
                  number: 80
